--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "bitcoinjs-lib",
-  "version": "0.1.3",
-  "description": "Client-side Bitcoin JavaScript library",
+  "name": "cryptocoin",
+  "version": "0.0.1",
+  "description": "Crypto Coin JavaScript library",
   "main": "./src/index.js",
 
-  "keywords": [
-    "bitcoin",
-    "browser",
-    "client",
-    "library"
-  ],
+  "keywords": [],
 
   "author": "Stefan Thomas <justmoon@members.fsf.org> (http://www.justmoon.net)",
 
   "repository" : {
     "type" : "git",
-    "url" : "https://github.com/bitcoinjs/bitcoinjs-lib.git"
+    "url" : "https://github.com/cryptocoinjs/cryptocoin"
   },
 
   "devDependencies" : {
