--- a/package.json
+++ b/package.json
@@ -12,22 +12,11 @@
     "type" : "git",
     "url" : "https://github.com/cryptocoinjs/cryptocoin"
   },
-
   "devDependencies" : {
-    "mocha": "1.8.1",
-    "istanbul": "0.1.30",
-    "uglify-js": "*",
-    "node-browserify": "https://github.com/substack/node-browserify/tarball/master"
-  },
-
-  "testling": {
-    "browsers": ["ie/9..latest", "firefox/15..latest", "chrome/22..latest"],
-    "harness" : "mocha-qunit",
-    "files": "test/*.js"
-  },
-
-  "scripts": {
-    "test": "istanbul test ./node_modules/.bin/_mocha -- --reporter list test/*.js",
-    "compile": "browserify src/index.js -s Bitcoin | uglifyjs > bitcoinjs-min.js"
+    "mocha": "*"
   }
+
+
+
+
 }
