--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "mocha": "*"
   },
   "dependencies": {
-    "cryptocoin-sha256": "0.0.2",
-    "cryptocoin-convert-hex": "0.0.1",
-    "cryptocoin-ripemd160": "0.0.2",
-    "cryptocoin-address-btc": "0.0.1",
-    "cryptocoin-eckey": "0.0.1",
-    "cryptocoin-bigint": "0.0.1",
-    "cryptocoin-base58": "0.0.1"
+    "sha256": "0.1.x",
+    "convert-hex": "0.1.x",
+    "ripemd160": "0.1.x",
+    "btc-address": "0.1.x",
+    "eckey": "0.1.x",
+    "cryptocoin-bigint": "0.1.x",
+    "cryptocoin-base58": "0.1.x"
   }
 }
