--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "sha256": "0.1.x",
     "convert-hex": "0.1.x",
     "ripemd160": "0.1.x",
-    "btc-address": "0.1.x",
-    "eckey": "0.2.x",
-    "cryptocoin-bigint": "0.1.x",
-    "cryptocoin-base58": "0.1.x",
-    "ecdsa": "~0.2.0"
+    "btc-address": "0.2.x",
+    "eckey": "0.3.x",
+    "bigi": "0.2.x",
+    "bs58": "0.2.x",
+    "ecdsa": "~0.3.0"
   }
 }
