dep upon secure-random

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eckey": "0.3.x",
     "bigi": "0.2.x",
     "bs58": "0.2.x",
-    "ecdsa": "~0.3.0"
+    "ecdsa": "~0.3.0",
+    "secure-random": "~0.1.0"
   }
 }
